# digin

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
digin/: __init__.py
examples/: api_response.py  basic.py  call.py  config_file.py  defaults.py  delimiters.py  getattr_and_setattr.py  getitem_and_setitem.py  key_formats.py  lists.py  modify_flag.py  modifying.py  set_and_get.py  tuples.py
nested_inside/: nests.py
tests/: test_defaults.py  test_delimiter.py  test_dict.py  test_errors.py  test_falsy.py  test_list.py  test_repr.py  test_tuple.py  tests.py
